# mcp-oauth2-connector

./: .env.example  .gitignore  MANIFEST.in  README.md  SECURITY_GUIDE.md  pyproject.toml  requirements.txt  setup.py
ezm/Scripts/: activate  activate.bat
src/: __init__.py
src/datakwip_mcp/: __init__.py  cli.py  main.py
src/datakwip_mcp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/datakwip_mcp/auth/: __init__.py  cognito.py  oauth.py
src/datakwip_mcp/config/: __init__.py  settings.py
src/datakwip_mcp/middleware/: __init__.py  cors.py  rate_limiting.py  security.py
src/datakwip_mcp/tools/: __init__.py  add.py  base.py  echo.py  registry.py
src/datakwip_mcp/utils/: __init__.py  client_detection.py  errors.py  logging_utils.py  validation.py
